--- a/.gitignore
+++ b/.gitignore
@@ -2,22 +2,8 @@
 .DS_Store
 
 # Xcode
-build/
-*.pbxuser
-!default.pbxuser
-*.mode1v3
-!default.mode1v3
-*.mode2v3
-!default.mode2v3
-*.perspectivev3
-!default.perspectivev3
 xcuserdata/
 *.xccheckout
-profile
-*.moved-aside
-DerivedData
-*.hmap
-*.ipa
 
 # Bundler
 .bundle
@@ -30,4 +16,4 @@ Carthage
 # Note: if you ignore the Pods directory, make sure to uncomment
 # `pod install` in .travis.yml
 #
-# Pods/
+Pods/
